plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.16'
    id 'maven-publish'
    id 'io.freefair.lombok' version '8.14'
}
version = project.mod_version
group = project.maven_group
base {
    archivesName = project.archives_base_name
}
repositories {
    maven { url 'https://jitpack.io' }
    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}

// Compat source sets. Each one can see main; main can see none of them, so it can never
// compile against an optional dependency. They're siblings, so they can't see each other.
sourceSets {
    replaymod {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
    // Empty for now: no sources, no dependency, no mixin config.
    flashback {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
}

// Holds no sources. A Loom run's classpath is exactly one source set's, and the compat sets
// above are siblings, so this unions them for the dev runs. Add every new compat set here.
sourceSets {
    devRuntime {
        compileClasspath += sourceSets.replaymod.output + sourceSets.replaymod.compileClasspath
        compileClasspath += sourceSets.flashback.output + sourceSets.flashback.compileClasspath
        runtimeClasspath += sourceSets.replaymod.output + sourceSets.replaymod.runtimeClasspath
        runtimeClasspath += sourceSets.flashback.output + sourceSets.flashback.runtimeClasspath
    }
}

// The compat source sets are split for compile-time isolation only. At runtime they're all
// one mod, so Loader has to be told to treat their output dirs as a single classpath group.
loom {
    mods {
        "worldexport" {
            sourceSet sourceSets.main
            sourceSet sourceSets.replaymod
            sourceSet sourceSets.flashback
        }
    }
    runs {
        // devRuntime transitively contains main and every compat source set.
        client {
            client();
            displayName = "Dev Client"
            sourceSet = sourceSets.devRuntime.name
        }
    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "net.minecraft:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    implementation(include("de.javagl:obj:0.4.0"))
    // For debugging exported replays
    implementation 'com.github.Igrium:CraftUI:0.8.0-b2'
//    modCompileOnly "com.github.igrium:craftui:db770015ca"
    replaymodImplementation "maven.modrinth:replaymod:${replaymod_version}"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}
processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}
tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}
test {
    useJUnitPlatform()
}
java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}
jar {
    inputs.property "archivesName", project.base.archivesName
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
    from sourceSets.replaymod.output
    from sourceSets.flashback.output
}
// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
